--- a/gb/20/7/9/n12243122.md
+++ b/gb/20/7/9/n12243122.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>留美学生秋季学期不想离境 律师支招</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_8430ab-600x400.jpg" />
-<h6>美国SEVP周一宣布，留美国际生秋季开学后不可百分之百上网课，洛杉矶华裔律师蔡玟慧对此给出了几点建议性对策。图为加大洛杉矶分校（UCLA）一景。（季媛／大纪元）
-</h6>
+<h6>美国SEVP周一宣布，留美国际生秋季开学后不可百分之百上网课，洛杉矶华裔律师蔡玟慧对此给出了几点建议性对策。图为加大洛杉矶分校（UCLA）一景。（季媛／大纪元）</h6>
 <hr>
 	<p>【大纪元2020年07月09日讯】（大纪元记者姜琳达洛杉矶报导）周一（7月6日），美国移民及海关执法局（ICE）的学生和交流访问者项目（SEVP）宣布，2020秋季开学时，如果留学生将百分之百上网课，则暂时不能入境或需离开美国。对于不想离境的留学生，洛杉矶华裔律师蔡玟慧给出了几点建议性对策。</p>
 <p>首先，SEVP旧规新释的规定包括三种情况：第一，持 F-1 、M-1 签证的留学生，如果本年度秋季学期，所就读的学校决定只提供网课，目前在境外的留学生就暂时不得入境美国。身处美国的留学生倘若不想离境就得采取其它措施，例如转到提供校园内授课的学校，以保持学生签证的合法身份。</p>
@@ -24,35 +23,34 @@
 <p>目前，加州州立大学波莫纳分校（Cal Poly Pomona）、尔湾山谷学院（Irvine Valley College）等大院校，都决定本年度秋季学期采用完全网上授课的方式，但SEVP规定推出后，一些院校也向学生发出通知，表示或许会做出调整。另外加大系统的院校也将以网上授课为主，但会提供一些线下课程。</p>
 <p>也有留学生家长认为，如果学校真的为学生着想，可以将原定的百分之百网课，改成在校园内面授和网上授课的混合式教学模式，只要有一些在校园内面授的课程，就可以解决学生的困境。◇</p>
 <p>责任编辑：方平</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/6/n12236937.md#1">忧安全问题 荷议员吁限中国留学生报读学科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/6/n12237306.md#1">留学生只上网课须离境 美颁秋季入学新规</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/8/n12240399.md#1">全上网课须离境  中国留学生改上面授课</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607383.md#1">【元曲大家】什么样的杂剧堪称“千古绝品”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372260.md#1">【未解之谜】“Trump”的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14373837.md#1">【未解之谜】雷达扫描惊现巨型地下城市 吴哥窟身世之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/8/n10769198.md#1">不辱使命、慷慨赴死的靖康第一忠臣李若水</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365767.md#1">清朝知府借香火钱 神明催债为救灾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14375107.md#1">【菁英论坛】无差别伤人大爆发 中国进至暗时刻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361828.md#1">【晚间新闻】美国德州州长下令追击中共代理人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14375043.md#1">【直播】美国务院简报会：驻乌使馆发警报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372967.md#1">沈舟：美军会如何对付中共的歼-20</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14373875.md#1">湖南常德一小学校门口汽车撞人 多人倒地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14374173.md#1">国内经济衰退民怨沸腾 中共党魁G20峰会大撒币</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373811.md#1">黄晓明新片票房惨淡 被指疑受网红女友牵连</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373737.md#1">吁纠正百度百科个人信息 汤唯IG发文求助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14374047.md#1">真人《白雪公主》预算超支 面临票房及舆论压力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373297.md#1">《神鬼战士2》国际票房超越前作及《红色一号》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14374308.md#1">心脏才动手术 赵少康因摔跤肝脏出血送加护病房</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371299.md#1">越南最美度假岛屿 富国岛南岛的迷人之处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373265.md#1">赶快瞧一瞧 旅游专家每次出行必带的物品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371135.md#1">医师吃两种芽菜让B肝病毒消失 脂肪肝也痊愈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366941.md#1">日本医学专家独创长寿养生法：一十百千万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369738.md#1">这种饼干可以当早餐吃 营养美味又方便</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/9/n12243122.htm">留美学生秋季学期不想离境 律师支招</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/7/9/n12243122.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
